2008-02-17  Colin Watson  <cjwatson@debian.org>  (tiny change)

	* lib/am/tags.am (ID): Fix typo in workaround for old awk.

2008-02-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/.gitignore: Ignore files generated by `make ps pdf html'.

2008-02-05  Reuben Thomas  <rrt@sc3d.org>

	* doc/automake.texi (CVS): configure.ac will appear newer, not
	older, than configure.  Use `lexical' instead of `alphabetical'.

2008-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/man3.test: Avoid `make VAR=value'.

	* tests/subst3.test: New test.
	* tests/Makefile.am: Update.

	* tests/instsh2.test: Split off testing of `install-sh -C' ...
	* tests/instsh3.test: ... to this new test, requiring non-root.
	* tests/Makefile.am: Adjust.
	* THANKS: Update.
	Report by Theodoros V. Kalamatianos.

2008-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/nobase.test: Extend test to generated files.

	* tests/nobase-python.test: New test, nobase for python files.
	* tests/Makefile.am: Update.

	* tests/nobase.test: Split off libtool part of nobase.test for
	increased test exposure, to ...
	* tests/nobase-libtool.test: ... this new test.
	* tests/Makefile.am: Update.

2008-01-23  Eric Blake  <ebb9@byu.net>

	Fix color.test when using BSD grep.
	* tests/color.test: Ensure that grep can handle non-printing
	characters.

2008-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/lisp3.test: Fix typo.

2008-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/mans.am (install-man%SECTION%): Prefer generated manpages
	over distributed ones.
	Report and patch by Peter Breitenlohner.
	* tests/man3.test: New test.
	* tests/Makefile.am: Update.

2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/tar.test: Skip if no appropriate tar was found.

2008-01-19  NightStrike  <nightstrike@gmail.com>

	* doc/automake.texi (Dependency Tracking): Fix typo.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/config-ml.in, lib/config.guess, lib/config.sub,