@@ -1,3 +1,10 @@
+2008-02-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	PR automake/498
+	* m4/options.m4 (_AM_SET_OPTIONS): Use m4_foreach_w instead of
+	obsolete AC_FOREACH.
+	Report by NightStrike and gurganbl@rose-hulman.edu.
+
 2008-02-17  Colin Watson  <cjwatson@debian.org>  (tiny change)
 
 	* lib/am/tags.am (ID): Fix typo in workaround for old awk.
